<resources>
    <string name="app_name">Ekhata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">pending</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="received_today">Received today</string>
    <string name="total_udhar">Total Udhar</string>
    <string name="customers">Customers</string>
    <string name="rupee_symbol">₹</string>
    <string name="total_udhar_amount">₹%1$s</string>
    <string name="received_today_amount">₹%1$s</string>
    <string name="customers_with_udhar">Customers with udhar</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo_optional">Add Photo (Optional)</string>
    <string name="customer_name">Customer name</string>
    <string name="save_customer">Save customer</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
</resources>